# stm32flash

./: .clang-format  .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  compiler.h  dev_table.c  i2c.c  init.c  main.c  port.c  port.h  serial.h  serial_platform.c  serial_posix.c  serial_w32.c  stm32.c  stm32.h  utils.h
parsers/: binary.c  binary.h  hex.c
src/: compiler.h  dev_table.c  i2c.c  init.c  init.h  main.c  serial_common.c  serial_w32.c  utils.c
src/parsers/: hex.h  parser.h
src/win32/: getopt.h  unistd.h
unistd_win32/: getopt.c  getopt.h  unistd.c  unistd.h
